// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auto approve can be disabled 1`] = `
Object {
  ".github/dependabot.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

version: 2
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: projen
    default_labels: []
",
  ".github/workflows/auto-approve.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: auto-approve
on:
  pull_request:
    types:
      - labeled
      - opened
jobs:
  approve:
    if: contains(github.event.pull_request.labels.*.name, 'pr/auto-approve')
    runs-on: ubuntu-latest
    steps:
      - uses: hmarr/auto-approve-action@v2.0.0
        with:
          github-token: \\"{{ secrets.PROJEN_SECRET }}\\"
",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.github/dependabot.yml
!/.github/workflows/auto-approve.yml
!/.projen/deps.json
!/.projen/tasks.json
",
  "README.md": "# replace this",
}
`;

exports[`auto approve defaults to true when secret is defined 1`] = `
Object {
  ".github/dependabot.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

version: 2
updates:
  - package-ecosystem: npm
    versioning-strategy: lockfile-only
    directory: /
    schedule:
      interval: daily
    ignore:
      - dependency-name: projen
    default_labels:
      - pr/auto-approve
",
  ".github/workflows/auto-approve.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: auto-approve
on:
  pull_request:
    types:
      - labeled
      - opened
jobs:
  approve:
    if: contains(github.event.pull_request.labels.*.name, 'pr/auto-approve')
    runs-on: ubuntu-latest
    steps:
      - uses: hmarr/auto-approve-action@v2.0.0
        with:
          github-token: \\"{{ secrets.PROJEN_SECRET }}\\"
",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
node_modules/
!/.github/dependabot.yml
!/.github/workflows/auto-approve.yml
!/.projen/deps.json
!/.projen/tasks.json
",
  "README.md": "# replace this",
}
`;
